syntax = "proto3";

package solvio;

import "google/protobuf/empty.proto";

service Raft {
  /*
  Send Raft message to another peer
   */
  rpc Send (RaftMessage) returns (google.protobuf.Empty) {}
}

message RaftMessage {
    bytes message = 1;
}
